--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /WinterVacation01/obj
+/WinterVacation04/obj
+/WinterVacation01/bin/Debug
+/WinterVacation04/bin/Debug
